# gmailrules

./: README.md  justfile  pyproject.toml
app/: __main__.py  app.py  example.json  models.py
example-rules/: example1.xml
